Trips: - old Trips can be viewed (up to one year old0 - change font in pdf so czech chars shows correctly - created blade for table of trips for better readability of code

--- a/resources/assets/sass/partak/pdf.scss
+++ b/resources/assets/sass/partak/pdf.scss
@@ -5,3 +5,7 @@ h3 {
   margin-top: 30px;
   margin-bottom: 30px;
 }
+
+body {
+  font-family: "DejaVu Sans", sans-serif;
+}
